# Lazyfoo_SDL

./: CMakeLists.txt  README.md  conanfile.txt
src/: App.cpp  App.h  Texture.cpp  Texture.h  main.cpp
